--- a/color_a_web_page.html
+++ b/color_a_web_page.html
@@ -39,8 +39,14 @@
 				<td class="Navy"></td>
 			</tr>
 		</table>
+		<table id="colorPickerTools">
+			<tr>
+				<td class="Eraser"><img src="icons/eraser.svg" width="25px" height="25px"></td>
+			</tr>
+		</table>
 		<div class="brush"><p class="colorBlock">Кисть 🖌</p></div>
 		<p id="grid">Сетка ✅</p>
+		<p id="clean">Отчистка ✅</p>
 	</div>
 	<script src="javascript/paint.js"></script>
 	<script src="javascript/config.js"></script>
